# gto

./: Cargo.toml  package-lock.json  package.json
src/: main.rs
src/compute/: mod.rs  monte_carlo.rs
src/poker/: adaptive.rs  board.rs  cards.rs  deck.rs  drill.rs  drill_result.rs  equity.rs  gto_range.rs  hand.rs  mod.rs  parse.rs  range.rs  range2.rs  ranking.rs  user_stats.rs  util.rs
src/ux/: cli.rs  controllers.rs  web.rs
src/ux/static/: tailwind.css
src/ux/templates/: base.html  dashboard.html  drill.html  index.html  results.html
src/variants/: mod.rs  nlhe.rs  plo.rs
src/variants/plo/: blockers.rs
