[package]
name = "gto"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tera = "1.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
csv = "1.3"